# mcp-context-forge

./: .ISSUE_5402_OUTDATED_NOTICE.md  .bumpversion.cfg  .checkov.yml  .coveragerc  .darlint  .dockerignore  .env.example  .env.production  .eslintrc.json  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .grype.yaml  .markdownlint-cli2.yaml  .nvim.lua  .pre-commit-config.yaml  .pre-commit-lite.yaml  .pylintrc  .secrets.baseline  .travis.yml  .yamllint  0001-feat-support-cancellation-of-long-running-tool-execu.patch  404.html  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COLLABORATIVE_FILTERING.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.cyberfraud  Containerfile.lite  Containerfile.scratch  DATABASE_BACKEND_DESIGN_SECTION.md  DATABASE_OAUTH_ANALYSIS.md  DEMO-QUICK-REFERENCE.md  DESIGN_DOCUMENT_PHASE1_CLARIFICATION.md  (+168 more)
a2a-agents/rust/a2a-echo-agent/: Cargo.toml  Containerfile  Dockerfile  Makefile  README.md
cpex-content-moderation/: README.md  pyproject.toml
cpex-content-moderation/cpex_content_moderation/: __init__.py  content_moderation.py  plugin-manifest.yaml
cpex-content-moderation/tests/: test_content_moderation.py  test_content_moderation_integration.py
crates/contextforge_benchmark_console/: Cargo.toml
crates/contextforge_benchmark_console/src/: main.rs
crates/contextforge_benchmark_runner/: Cargo.toml
crates/contextforge_benchmark_runner/assets/: Containerfile  docker-entrypoint.sh
crates/contextforge_benchmark_runner/src/: lib.rs  main.rs
crates/contextforge_goose/: Cargo.toml  goosefile_benchmark.rs
crates/validation_middleware_rust/: Cargo.toml  pyproject.toml
crates/validation_middleware_rust/src/: json.rs  lib.rs  matcher.rs  paths.rs  sanitize.rs
crates/wrapper/: Cargo.toml
crates/wrapper/src/: json_rpc_id_fast.rs
mcp_reverse_proxy/: pyproject.toml
mcp_reverse_proxy/docs/: README.md  USER_README.md
mcp_reverse_proxy/src/mcp_reverse_proxy/: __init__.py  __main__.py  base.py  cert_utils.py  cli.py  client.py  logging_config.py
mcp_reverse_proxy/tests/: README.md  __init__.py  test_mcp_reverse_proxy_base.py  test_mcp_reverse_proxy_cli.py  test_mcp_reverse_proxy_client.py  test_mcp_reverse_proxy_sse_adapter.py  test_mcp_reverse_proxy_stdio_adapter.py  test_mcp_reverse_proxy_streamablehttp_adapter.py  test_mcp_reverse_proxy_websocket_adapter.py
mcpgateway_rust/: Cargo.toml  Makefile  pyproject.toml
mcpgateway_rust/services/a2a_service/: Cargo.toml
mcpgateway_rust/src/: lib.rs
mcpgateway_transport_rs/: Cargo.toml  pyproject.toml
mcpgateway_transport_rs/src/: error.rs  lib.rs
mcpgateway_transport_rs/src/http/: streamable.rs
plugins_rust/json_repair/: Cargo.toml  Makefile  compare.py  compare_performance.py
plugins_rust/json_repair/benches/: json_repair.rs
plugins_rust/json_repair/src/: lib.rs
plugins_rust/output_length_guard/: Cargo.toml  Makefile  compare_performance.py  pyproject.toml
plugins_rust/output_length_guard/src/: lib.rs
plugins_rust/pii_filter/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins_rust/pii_filter/benches/: pii_filter.rs
plugins_rust/pii_filter/benchmarks/: compare_pii_filter.py
plugins_rust/pii_filter/src/: config.rs  detector.rs  error.rs  lib.rs  masking.rs  patterns.rs
plugins_rust/pii_filter/tests/: integration.rs
plugins_rust/regex_filter/: Cargo.toml  Makefile  README.md  compare_performance.py
plugins_rust/regex_filter/benches/: regex_filter.rs
plugins_rust/regex_filter/src/: lib.rs
plugins_rust/retry_with_backoff/: Cargo.toml  Makefile  compare_performance.py  pyproject.toml
plugins_rust/retry_with_backoff/src/: lib.rs
plugins_rust/secrets_detection/: Cargo.toml  Makefile  README.md  compare_performance.py
plugins_rust/secrets_detection/benches/: secrets_detection.rs
plugins_rust/secrets_detection/examples/: heavy_workload.rs
plugins_rust/secrets_detection/src/: config.rs  lib.rs  patterns.rs  scanner.rs
praxis_cf_dataplane/: Cargo.toml  README.md  build.rs  praxis_cf_dataplane.yaml
praxis_cf_dataplane/docs/: architecture.md  configuration.md  filter-chain-examples.md
praxis_cf_dataplane/policies/: post_routing.rego  pre_routing.rego
praxis_cf_dataplane/proto/: control_plane.proto
praxis_cf_dataplane/src/: lib.rs
praxis_cf_dataplane/src/filters/: control_plane_data.rs  mcp_broker.rs  mod.rs  tools_router.rs  upstream_proxy.rs
tools_rust/a2a_runtime/: Cargo.toml
tools_rust/a2a_runtime/benches/: invoke.rs
tools_rust/a2a_runtime/src/: auth.rs  cache.rs  circuit.rs  config.rs  errors.rs  event_store.rs  http.rs  invoke.rs  lib.rs  metrics.rs  push.rs  queue.rs  server.rs  session.rs  trust.rs
tools_rust/a2a_runtime/tests/: binary.rs  integration.rs  test_helpers.rs
tools_rust/a2a_service/: Cargo.toml  Makefile  compare_performance.py
tools_rust/a2a_service/benches/: invoke.rs
tools_rust/a2a_service/src/: auth.rs  circuit.rs  config.rs  errors.rs  eviction.rs  http.rs  invoker.rs  lib.rs  main.rs  metrics.rs  queue.rs  server.rs
tools_rust/a2a_service/tests/: integration.rs
tools_rust/auth/: Cargo.toml  build.rs
tools_rust/auth/src/: config.rs  core_auth_policy.rs  db.rs  error.rs  flow.rs  jwt.rs  lib.rs  main.rs  normalize.rs  server.rs  state.rs  stats.rs  tests.rs  types.rs
tools_rust/benchmark_runner/: Cargo.toml
tools_rust/benchmark_runner/src/: lib.rs  main.rs
tools_rust/contextforge_goose/: Cargo.toml  goosefile_benchmark.rs
tools_rust/mcp_runtime/: Cargo.toml  DEVELOPING.md  FOLLOWUPS.md  Makefile  README.md  RELEASE-CHECKLIST.md  STATUS.md  TESTING-DESIGN.md
tools_rust/mcp_runtime/src/: config.rs  grpc.rs  lib.rs  main.rs  observability.rs  telemetry.rs
tools_rust/mcp_runtime/tests/: cli.rs  runtime.rs  trace_script.rs
tools_rust/plugin_telemetry_common/: Cargo.toml
tools_rust/plugin_telemetry_common/src/: lib.rs
tools_rust/request_logging_masking_native_extension/: Cargo.toml  pyproject.toml
tools_rust/validation_middleware_rust/: Cargo.toml  pyproject.toml
tools_rust/validation_middleware_rust/src/: lib.rs
tools_rust/validation_sidecar/: Cargo.toml
(+7379 files in other folders)
