[package]
name = "mcpgateway_transport_rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Experimental Rust Streamable HTTP transport backend scaffold for MCP Context Forge"

[lib]
name = "mcpgateway_transport_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }