[package]
name = "contextforge_benchmark_console"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
shlex = "1.3.0"
toml = "0.8.23"

[lints]
workspace = true
