[package]
name = "contextforge_benchmark_runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.42", features = ["serde"] }
clap.workspace = true
csv = "1.3.1"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
toml = "0.9.7"

[lints]
workspace = true
