[package]
name = "validation_middleware_rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "validation_middleware_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "validation_middleware_rust_stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
pyo3.workspace = true
pyo3-stub-gen.workspace = true
regex.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["unbounded_depth"] }
serde_stacker = "0.1.12"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
