[package]
name = "pii_filter"
version = "1.0.0-RC-2"
edition = "2024"
rust-version = "1.85"
authors = ["ContextForge Contributors"]
license = "Apache-2.0"
repository = "https://github.com/IBM/mcp-context-forge"
description = "High-performance PII detection and masking library"

[lib]
name = "pii_filter_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
log = "0.4.28"
pyo3 = { version = "0.28.2", features = ["abi3-py311"] }
pyo3-log = "0.13.3"
pyo3-stub-gen = "0.19.0"
pythonize = "0.28.0"
regex = "1.12.3"
rlibphonenumber = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
sha2 = "0.10.9"
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.10.0"

[[bench]]
name = "pii_filter"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
