[package]
name = "secrets_detection"
version = "1.0.0-RC-1"
edition = "2024"
authors = ["ContextForge Contributors"]
license = "Apache-2.0"
repository = "https://github.com/IBM/mcp-context-forge"
description = "Secret detection plugin"

[lib]
name = "secrets_detection_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
log = "0.4"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace"] }
pyo3 = { version = "0.28.2", features = ["abi3-py311"] }
pyo3-log = "0.13.3"
pyo3-stub-gen = "0.19"
regex = "1.12"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "secrets_detection"
harness = false
