[package]
name = "a2a_service"
version = "1.0.0-BETA.2"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["ContextForge Contributors"]
repository = "https://github.com/contextforge/mcp-context-forge"
description = "High-performance A2A agent invocation service (standalone Axum HTTP)"

[[bin]]
name = "a2a-service"
path = "src/main.rs"

[lib]
name = "a2a_service"
path = "src/lib.rs"

[dependencies]
axum = "0.8.8"
bytes = "1.11"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1"
url = "2.5"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
criterion = "0.8.2"
http-body-util = "0.1"
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6"

[[bench]]
name = "invoke"
harness = false
