[package]
name = "contextforge_auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Mihai Criveti"]
description = "Experimental core-owned Rust auth service for ContextForge"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive", "env"] }
deadpool-postgres = "0.14.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "http2", "rustls-tls-native-roots"] }
rustls = "0.23.37"
rustls-native-certs = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.50.0", features = ["full"] }
tokio-postgres = "0.7.15"
tokio-postgres-rustls = "0.13.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json", "http2", "rustls-tls-native-roots"] }
tokio = { version = "1.50.0", features = ["full"] }
