[package]
name = "contextforge_benchmark_runner"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.7"
