[package]
name = "contextforge_goose"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "contextforge_goose"
path = "goosefile_benchmark.rs"

[dependencies]
goose = "0.18.1"
goose-eggs = "0.6.0"
rand = "0.8.5"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
