[package]
name = "validation_middleware_rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "validation_middleware_rust"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.21.3"
pyo3 = { version = "0.27.1", features = ["abi3-py311"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["unbounded_depth"] }
serde_stacker = "0.1.12"

[dev-dependencies]
tempfile = "3.23.0"
