[workspace]
resolver = "3"
members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["ContextForge Contributors"]
license = "Apache-2.0"
repository = "https://github.com/IBM/mcp-context-forge"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "=1.23.0", features = ["v4"] }

[workspace.lints.clippy]
multiple_crate_versions = "allow"

[package]
name = "a2a-echo-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust A2A echo agent for ContextForge testing"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true